--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "udp_crafter"
 version = "0.1.0"
-authors = ["bobo"]
+authors = ["Jeremy Mill"]
+description = "A small library for crafting UDP packets built on pnet"
+license = "MIT"
+repository = "https://github.com/LivingInSyn/udp_crafter"
 
 [dependencies]
 pnet = "0.21.0"
